--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,6 +7,7 @@ layout: default
 	<div class="center">
 		<h1 class="title">{{ page.title }}</h1>
 		<time class="code">{{ page.date | date: '%B %-d, %Y' }}</time>
+		<h2 class="subtitle">{{ page.subtitle }}</h1>
 	</div>
 
 	<div class="divider"></div>
